# asic-rs

./: Cargo.toml
src/: lib.rs  main.rs
src/data/: miner.rs  pool.rs
src/data/device/: mod.rs
src/data/device/models/: antminer.rs  avalonminer.rs  mod.rs
src/miners/: data.rs
src/miners/api/rpc/: cgminer.rs  mod.rs  status.rs
src/miners/api/web/: mod.rs
src/miners/backends/: avalon_miner.rs  mod.rs  traits.rs
src/miners/backends/antminer/: mod.rs
src/miners/backends/antminer/Antminer2022/: mod.rs  rpc.rs  web.rs
src/miners/backends/avalon/: avalon_miner.rs  mod.rs
src/miners/backends/avalonminer/avalon/: mod.rs
src/miners/backends/avalonminer/avalon_a/: mod.rs
src/miners/backends/bitaxe/v2_9_0/: mod.rs
src/miners/backends/bmminer/: antminer_modern.rs  api.rs  mod.rs  rpc.rs  web.rs
src/miners/backends/btminer/v2/: mod.rs
src/miners/backends/btminer/v3/: mod.rs
src/miners/backends/epic/: mod.rs  web.rs
src/miners/backends/espminer/v2_0_0/: mod.rs
src/miners/backends/espminer/v2_9_0/: mod.rs
src/miners/backends/luxminer/: mod.rs
src/miners/backends/luxminer/v1/: mod.rs  rpc.rs
src/miners/backends/marathon/v1/: mod.rs  web.rs
src/miners/backends/vnish/: mod.rs  web.rs
src/miners/factory/: hardware.rs  mod.rs  traits.rs
src/miners/factory/model/: avalonminer.rs  mod.rs
src/test/json/: mod.rs
