[package]
name = "asic-rs"
version = "0.1.0"
edition = "2024"
license = "LICENSE.txt"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
diqwest = "3.1"
futures = "0.3"
macaddr = { version = "1.0", features = ["serde_std"] }
measurements = { version = "0.11", features = ["serde"] }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
regex = "1.11.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
url = "2.5"
ipnet = "2.11"
rand = "0.9"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
